frontend/test/should_fail/container_copy_constructor_002.grg
test t
{
	if {
		set<Edge>(set<Node>{}).empty();
	}
}
